--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
 
-    <form id="attendanceForm" action="https://script.google.com/macros/s/AKfycbzQODSJt4iWwIUpZ5wxaOWiN-aUQZ7oXpkCxJ4U2eA7MmIjrKjJAeCj3MOQeTvSVxhI/exec" method="post" onsubmit="return validateLocation()">
+    <form id="attendanceForm" action="https://script.google.com/macros/s/AKfycbzQODSJt4iWwIUpZ5wxaOWiN-aUQZ7oXpkCxJ4U2eA7MmIjrKjJAeCj3MOQeTvSVxhI/exec" method="post">
         <!-- Name Section -->
         <div class="section name-section">
             <label for="name">Name:</label>
@@ -186,62 +186,22 @@
             document.getElementById('timestamp').value = formattedTimestamp;
         }
 
-        // Function to calculate the distance between two lat/lon points using the Haversine formula
-        function getDistance(lat1, lon1, lat2, lon2) {
-            const R = 6371; // Radius of the Earth in kilometers
-            const dLat = (lat2 - lat1) * (Math.PI / 180);
-            const dLon = (lon2 - lon1) * (Math.PI / 180);
-
-            const a =
-                Math.sin(dLat / 2) * Math.sin(dLat / 2) +
-                Math.cos(lat1 * (Math.PI / 180)) * Math.cos(lat2 * (Math.PI / 180)) *
-                Math.sin(dLon / 2) * Math.sin(dLon / 2);
-            const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-            const distance = R * c * 1000; // Convert to meters
-            return distance;
-        }
-
-        // Function to capture and validate the user's location
+        // Function to capture the user's location
         function captureLocation() {
-            const allowedLocations = [
-                { lat: 23.2669977, lon: 87.8286788 },
-                { lat: 23.2439117, lon: 87.8682043 },
-                { lat: 23.2669891, lon: 87.8286828 }
-            ];
-
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(function(position) {
                     const lat = position.coords.latitude;
                     const lon = position.coords.longitude;
 
-                    // Check if the user's location is within 10 meters of any allowed location
-                    const isAllowed = allowedLocations.some(loc => {
-                        const distance = getDistance(lat, lon, loc.lat, loc.lon);
-                        return distance <= 10; // 10 meters radius
-                    });
-
-                    if (isAllowed) {
-                        document.getElementById('location').value = `${lat}, ${lon}`;
-                        document.getElementById('locationMessage').textContent = ''; // Clear location message
-                    } else {
-                        document.getElementById('locationMessage').textContent = 'You are not in an allowed location to access this form.';
-                        document.getElementById('attendanceForm').style.display = 'none'; // Hide the form
-                    }
+                    // Store the location in the hidden field
+                    document.getElementById('location').value = `${lat}, ${lon}`;
+                    document.getElementById('locationMessage').textContent = ''; // Clear location message
                 }, function(error) {
                     document.getElementById('locationMessage').textContent = 'Geolocation error occurred. Please enable location services.';
                 });
             } else {
                 document.getElementById('locationMessage').textContent = 'Geolocation is not supported by this browser.';
             }
-        }
-
-        // Function to validate location before form submission
-        function validateLocation() {
-            const locationMessage = document.getElementById('locationMessage').textContent;
-            if (locationMessage) {
-                return false; // Block form submission if location is invalid
-            }
-            return true; // Allow form submission
         }
 
         // Call location capture function on page load
