--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
                         const lon = position.coords.longitude;
 
                         // Coordinates of the two points (within 20 meters radius)
-                        const point1 = { lat: 23.2669989, lon: 87.8261176 };
-                        const point2 = { lat: 23.2669989, lon: 87.8286975 };
+                        const point1 = { lat: 23.2669989, lon: 87.8261176 }; // Your specific point 1
+                        const point2 = { lat: 23.2669989, lon: 87.8286975 }; // Your specific point 2
 
                         // Calculate distance between two points in meters
                         const distance = getDistanceFromLatLonInMeters(lat, lon, point1.lat, point1.lon);
